internal/gatewayapi/testdata/httproute-redirect-port-multi-listener-scheme.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http-8080
      protocol: HTTP
      port: 8080
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-9090
      protocol: HTTP
      port: 9090
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http-8080
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http-9090
    rules:
    - matches:
      - path:
          value: "/"
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          path:
            type: ReplaceFullPath
            replaceFullPath: /redirected
